--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body{
     background-image: linear-gradient(180deg, #d7d2cc 0%, #304352 100%);
     height: 100vh;
-    margin: 0px;
+    margin: 0;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
